[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/KevinGrape.png" type="Texture" id=1]
[ext_resource path="res://Graphics/vab_background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/RocketMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.235294, 0.235294, 0.721569 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[node name="RocketMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 499.0
margin_bottom = 896.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer"]
margin_right = 499.0
margin_bottom = 704.0
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageCalibrator" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_right = 435.0
margin_bottom = 14.0
text = "STAGE CALIBRATOR"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 30.0
margin_right = 435.0
margin_bottom = 44.0

[node name="TankRadius" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 142.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "TANK RADIUS"
align = 1

[node name="TankHeight" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "TANK HEIGHT"
align = 1

[node name="EngineCount" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 292.0
margin_right = 435.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "ENGINES"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 60.0
margin_right = 435.0
margin_bottom = 418.0
size_flags_vertical = 3

[node name="TankRadius" type="VSlider" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 142.0
margin_bottom = 358.0
size_flags_horizontal = 3
min_value = 2.0
max_value = 25.0
step = 0.01
value = 2.0
tick_count = 20

[node name="TankHeight" type="VSlider" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 358.0
size_flags_horizontal = 3
min_value = 10.0
max_value = 150.0
step = 0.01
value = 10.0
tick_count = 20

[node name="EngineCount" type="VSlider" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 435.0
margin_bottom = 358.0
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
tick_count = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 434.0
margin_right = 435.0
margin_bottom = 448.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_right = 142.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "30"
align = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "30"
align = 1

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 292.0
margin_right = 435.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "30"
align = 1

[node name="AddEdit" type="Button" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_left = 89.0
margin_top = 464.0
margin_right = 345.0
margin_bottom = 496.0
rect_min_size = Vector2( 256, 32 )
size_flags_horizontal = 4
text = "ADD STAGE (-$500)"

[node name="Edit" type="Button" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_left = 89.0
margin_top = 512.0
margin_right = 345.0
margin_bottom = 544.0
rect_min_size = Vector2( 256, 32 )
size_flags_horizontal = 4
text = "EDIT STAGE"

[node name="Remove" type="Button" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_left = 89.0
margin_top = 560.0
margin_right = 345.0
margin_bottom = 592.0
rect_min_size = Vector2( 256, 32 )
size_flags_horizontal = 4
text = "REMOVE STAGE (+$500)"

[node name="Money" type="Label" parent="HBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_left = 89.0
margin_top = 608.0
margin_right = 345.0
margin_bottom = 640.0
rect_min_size = Vector2( 256, 32 )
size_flags_horizontal = 4
text = "MONEY: $"
align = 1
valign = 1

[node name="Launch" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 768.0
margin_right = 499.0
margin_bottom = 896.0
rect_min_size = Vector2( 0, 128 )
text = "LAUNCH"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 563.0
margin_right = 896.0
margin_bottom = 896.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="TextureContainer" type="Control" parent="HBoxContainer/VBoxContainer2"]
margin_right = 333.0
margin_bottom = 816.0
size_flags_vertical = 3

[node name="Boss" type="Sprite" parent="HBoxContainer/VBoxContainer2/TextureContainer"]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 832.0
margin_right = 333.0
margin_bottom = 896.0
rect_min_size = Vector2( 0, 64 )
custom_constants/separation = 16

[node name="Up" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 158.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "/\\"

[node name="Down" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 174.0
margin_right = 333.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "\\/"

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/TankRadius" to="." method="_on_TankRadius_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/TankHeight" to="." method="_on_TankHeight_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/EngineCount" to="." method="_on_EngineCount_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Panel/VBoxContainer/AddEdit" to="." method="_on_AddEdit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Panel/VBoxContainer/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Panel/VBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Launch" to="." method="_on_Launch_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/Down" to="." method="_on_Down_pressed"]
